# DatabricksGenieBOT

./: .gitignore  Makefile  README.md  adaptive_card.py  app.py  bot.py  const.py  deploy.sh  genie.py  genie_result.py  pyproject.toml  requirements.txt  spaces.json
appManifest/: manifest.json
databricks-oauth/: readme.md
docs/: databricks_oauth.md  terraform.md
resources/: GenieResultCard.json
src/: adaptive_card.py  app.py  bot.py  const.py  genie.py  genie_result.py  login_dialog.py
src/chatx/: adaptive_card.py  app.py  bot.py  const.py  genie.py  genie_result.py  login_dialog.py
src/helpers/: __init__.py
terraform/azure_app_service/: .terraform.lock.hcl  bot.tf  databricks.tf  deploy.sh.tftpl  main.tf  manifest.json.tftpl  provider.tf  terraform.tf  variables.tf
tests/unit/: __init__.py  test_genie.py
